Código extremamente enxuto com carga intrísica de 2 pontos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # data source
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/casadocodigo?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/casadocodigorefatorado?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=devjs
 
